--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="element">
                 <img class="element__image" src="images/Карачаевск.jpg" alt="Карачаево-Черкесск">
                 <div class="element__name-card">
-                    <p class="element__heading">Карачаево-Ч...</p>
+                    <p class="element__heading">Карачаево-Черкесск</p>
                     <button type="button" class="element__like-button" aria-label="Лайк"></button>
                 </div>
             </div>
@@ -76,13 +76,13 @@
 
     <section class="popup popup_opened">
 
-        <div class="popup__container">
+        <div action="#" class="popup__container">
             <button type="button" class="popup__close" aria-label="Закрыть попап"></button>
-            <form name="form1" class="form">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <input placeholder="Жак-Ив Кусто" class="popup__name">
-                <input placeholder="Исследователь океана" class="popup__role">
-                <button type='submit' class="popup__save" aria-label="Сохранить">Сохранить</button>
+            <form action="#" name="form1" class="form">
+                <h2 class="form__title">Редактировать профиль</h2>
+                <input type="text" name="formInfo" placeholder="Жак-Ив Кусто" class="form__info popup__name">
+                <input type="text" name="formInfo" placeholder="Исследователь океана" class="form__info popup__role">
+                <button type="submit" class="form__save" aria-label="Сохранить">Сохранить</button>
             </form>
         </div>
 
