--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <button type="button" class="popup__close" aria-label="Закрыть попап"></button>
             <form action="#" name="form1" class="form">
                 <h2 class="form__title">Редактировать профиль</h2>
-                <input type="text" name="formInfo" placeholder="Жак-Ив Кусто" class="form__info popup__name">
-                <input type="text" name="formInfo" placeholder="Исследователь океана" class="form__info popup__role">
+                <input type="text" name="formInfo" placeholder="Жак-Ив Кусто" class="form__info" id="popup__name">
+                <input type="text" name="formInfo" placeholder="Исследователь океана" class="form__info" id="popup__role">
                 <button type="submit" class="form__save" aria-label="Сохранить">Сохранить</button>
             </form>
         </div>
