--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section class="profile">
-            <img class="profile__avatar" src="images/Жак Ив Кусто.jpg" alt="Авата профайла Жак-Ива Кусто">
+            <img class="profile__avatar" src="images/Жак-Ив-Кусто.jpg" alt=" Авата профайла Жак-Ива Кусто">
             <div class="profile__blok">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -51,14 +51,14 @@
                 <img class="element__image" src="images/Эльбрус.png" alt="Гора Эльбрус">
                 <div class="element__name-card">
                     <p class="element__heading">Гора Эльбрус</p>
-                    <button type="button" class="element__like-button" aria-label="Лайк"></button>
+                    <button type="button " class="element__like-button" aria-label="Лайк"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__image" src="images/Домбай.png" alt="Гора Домбай">
                 <div class="element__name-card">
                     <p class="element__heading">Домбай</p>
-                    <button type="button" class="element__like-button" aria-label="Лайк"></button>
+                    <button type="button " class="element__like-button" aria-label="Лайк"></button>
                 </div>
             </div>
             <div class="element">
@@ -74,18 +74,16 @@
         <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
 
-    <section class="popup popup_opened">
-
-        <div action="#" class="popup__container">
-            <button type="button" class="popup__close" aria-label="Закрыть попап"></button>
+    <section class="popup" id="popup">
+        <div class="popup__container">
+            <button type="button" class="popup__close" aria-label="Закрыть попап "></button>
             <form action="#" name="form1" class="form">
-                <h2 class="form__title">Редактировать профиль</h2>
-                <input type="text" name="formInfo" placeholder="Жак-Ив Кусто" class="form__info" id="popup__name">
-                <input type="text" name="formInfo" placeholder="Исследователь океана" class="form__info" id="popup__role">
+                <h2 class="form__title ">Редактировать профиль</h2>
+                <input type="text" name="formInfo" placeholder="Жак-Ив Кусто" class="form__info" id="popup-name">
+                <input type="text" name="formInfo" placeholder="Исследователь океана" class="form__info" id="popup-role">
                 <button type="submit" class="form__save" aria-label="Сохранить">Сохранить</button>
             </form>
         </div>
-
     </section>
     <script src="scripts/index.js"></script>
 </body>
